fix: spacing

--- a/src/components/RewardsSection/RewardsSection.module.scss
+++ b/src/components/RewardsSection/RewardsSection.module.scss
@@ -45,7 +45,7 @@
   -khtml-user-select: none;
   -webkit-tap-highlight-color: transparent;
   will-change: transform;
-  margin: var(--space-xs) 0;
+  margin: var(--space-xs) var(--space-2xs);
 }
 
 .emblaSlide {
